<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/refresh"
        android:icon="@mipmap/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_group_info"
        android:orderInCategory="100"
        android:title="@string/action_group_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="100"
        android:title="@string/action_delete_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report_group"
        android:orderInCategory="100"
        android:title="@string/action_report_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit_group"
        android:orderInCategory="100"
        android:title="@string/action_quit_group"
        app:showAsAction="never" />

</menu>
